@@ -7,7 +7,6 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RequiredArgsConstructor
 @Service
@@ -20,6 +19,6 @@ public class EtablissementService {
         return etablissementRepository.findAll()
                 .stream()
                 .map(etablissementMapper::entityToDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
